--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Sonsie+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Monoton|Sonsie+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kumar+One+Outline" rel="stylesheet">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <!--
       manifest.json provides metadata used when your web app is added to the
